* Nov 13 2000 hship

Allow static bindings to be pooled the same as field bindings.
Make the Rollover component only emit a "name" attribute if it is dynamic 
(i.e., has both an image and a focus and responds to mouse overs).  It was emitting an empty name attribute.

* Nov 10 2000 hship

Change the behavior of Forms and Form components slightly, such that it is possible
to write more sophisticated JavaScript event handlers.

* Nov 10 2000 hship

Release 0.2.5

* Nov 6 2000 hship

Add a refresh parameter to the Shell component, which allows for easy automatically refreshing pages.

* Nov 1 2000 hship

Improve exception reporting when an Insert component is unable to format its value.

* Nov 1 2000 hship

Change the reset component to not wipe out the session, simply force a refresh of all HTML templates and
component specifications.  It now encodes the currency page as well.
Fix some Javadoc errors.

* Nov 1 2000 hship

Merge PrimixFoundation into Tapestry.  Keeping them seperate had little value.
Change EnumPropertySelectionModel to require that the ResourceBundle be passed in
(since it can't always resolve the bundle, due to classloader issues).
Switch over to Servlet 2.2 APIs.

* Oct 25 2000 hship

Add raw parameter to Insert component.
Make some overdue documentation updates.

* Oct 24 2000 hship

Add the Shell component, and convert the Inspector, Exception, StaleSession
and StaleLink pages to use it.
Tiny change to exception handling when instantiating components and pages.
Add getDouble() method to IBinding.

* Oct 20 2000 hship

Add a JVM property to disable page pooling.

* Oct 18 2000 hship

Add resetServiceEnabled property to AbstractApplication.  Add the IDirect interface.
Implemented caching of FieldBindings.
Make sure the page is identified in a RequestCycleException, if a runtime exception
is thrown during rewindPage().

* Oct 16 2000 hship

Implemented the <field-binding> element of the specification.  Allows a binding to